add notecategory class
increase category database control class

--- a/MyNotebookModels/MyNotebookModels.csproj
+++ b/MyNotebookModels/MyNotebookModels.csproj
@@ -83,7 +83,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Database\NoteCategoryDataContext.cs" />
+    <Compile Include="Interfaces\INotebookDataContext.cs" />
+    <Compile Include="Models\NoteCategory.cs" />
+    <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyNotebookUtility\MyNotebookUtility.csproj">
+      <Project>{754C2BA6-DA96-4A79-BF52-8126233B82F9}</Project>
+      <Name>MyNotebookUtility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
