--- a/MyNotebookUtility/MyNotebookUtility.csproj
+++ b/MyNotebookUtility/MyNotebookUtility.csproj
@@ -83,7 +83,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Common\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\IsolatedStorageHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Converters\" />
