--- a/NotebookTest/NotebookTest.csproj
+++ b/NotebookTest/NotebookTest.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5A21D682-52B2-412A-88A7-98760CAAED26}</ProjectGuid>
+    <ProjectGuid>{1D31B0DB-83E7-495F-B7AE-5BD7DD27F82C}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyNotebookUnitTest</RootNamespace>
-    <AssemblyName>MyNotebookUnitTest</AssemblyName>
+    <RootNamespace>NotebookTest</RootNamespace>
+    <AssemblyName>NotebookTest</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -20,9 +20,9 @@
     </SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
-    <XapFilename>MyNotebookUnitTest_$(Configuration)_$(Platform).xap</XapFilename>
+    <XapFilename>NotebookTest_$(Configuration)_$(Platform).xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
-    <SilverlightAppEntry>MyNotebookUnitTest.App</SilverlightAppEntry>
+    <SilverlightAppEntry>NotebookTest.App</SilverlightAppEntry>
     <ValidateXaml>false</ValidateXaml>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
@@ -125,6 +125,19 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyNotebookModels\MyNotebookModels.csproj">
+      <Project>{1703EA7A-A2A6-4609-8E81-3DFCEA9151D7}</Project>
+      <Name>MyNotebookModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyNotebookUtility\MyNotebookUtility.csproj">
+      <Project>{754C2BA6-DA96-4A79-BF52-8126233B82F9}</Project>
+      <Name>MyNotebookUtility</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
